# PyProcess

./: .gitignore  README.md  pyproject.toml  release.sh  requirements.txt  setup.py
pyprocess/: __init__.py  file_system_object.py  file_utils.py  processes.py
test/: test_file_system_object.py  test_file_utils.py  test_processes.py
